#pragma once

enum class Couleur { Rouge, Vert, Bleu, Jaune, Violet, Gris, Cyan, Reset };